--- a/Admin Dashboard/package.json
+++ b/Admin Dashboard/package.json
@@ -21,7 +21,8 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
