--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,18 @@
   },
   "dependencies": {
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
-    "@heroicons/react": "^2.2.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^1.0.6",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "firebase": "^10.14.0",
     "framer-motion": "^11.9.0",
+    "heroicons": "^2.2.0",
     "lucide": "^0.446.0",
     "lucide-react": "^0.445.0",
     "otp-input-react": "^0.3.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
@@ -30,6 +33,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.14",
+    "vanilla-tilt": "^1.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
